--- a/src/portfolio-web/src/app/app.scss
+++ b/src/portfolio-web/src/app/app.scss
@@ -19,3 +19,9 @@
   padding: 2rem;
   color: var(--mat-sys-on-surface);
 }
+
+.divider {
+  border-left: 1px solid rgba(0,0,0,0.2);
+  height: 24px;
+  margin: 0 12px;
+}
