--- a/src/portfolio-web/src/app/pages/projects/projects.html
+++ b/src/portfolio-web/src/app/pages/projects/projects.html
@@ -2,8 +2,8 @@
 
 <mat-card appearance="outlined">
   <mat-card-header>
-    <mat-card-title> Australian Shepherd</mat-card-title>
-    <mat-card-subtitle>Herding group</mat-card-subtitle>
+    <mat-card-title>Australian Shepherd</mat-card-title>
+    <mat-card-subtitle>{{ 'app.title' | translate }}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-actions>
     <button matButton (click)="goToDetail('Australian Shepherd')">Learn More</button>
